fixed issues for staging

--- a/src/app/platform/notifications-dashboard/notifications-dashboard.component.html
+++ b/src/app/platform/notifications-dashboard/notifications-dashboard.component.html
@@ -45,7 +45,7 @@
                   {{ row.minutes_ago || 'N/A' }}
                 </td>
               </ng-container>
-              <ng-container matColumnDef="driver_name">
+              <ng-container matColumnDef="driver_name" *ngIf="loggedInUser.package[0].package_id === packageType.standard">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>DRIVER NAME</th>
                 <td mat-cell *matCellDef="let row">
                   {{ row.driver_name || '-' }}
