--- a/src/app/platform/fleets/fleet-dashboard/fleet-dashboard.component.html
+++ b/src/app/platform/fleets/fleet-dashboard/fleet-dashboard.component.html
@@ -107,7 +107,7 @@
             <label class="font-size-14 font-weight-600 ">Export:</label>
             <div class="btn-group btn-group-justified">
               <div class="btn-group" role="group">
-                <!--(click)="downloadXLS(downloadableLink)"  -->
+                <!-- (click)="downloadXLS(downloadableLink)" -->
                 <a [href]="downloadableLink" class="btn btn-outline btn-default"> <img
                     src="../../../assets/images/icon-xls.png" height="50">
                   <div class="font-size-12">
@@ -117,7 +117,7 @@
               </div>
               <!-- [disabled]="exportsid==true" -->
               <div class="btn-group" role="group">
-                <!-- (click)="downloadPDF(downloadableLink1)" -->
+                <!--(click)="downloadPDF(downloadableLink1)"  -->
                 <a [href]="downloadableLink1" class="btn btn-outline btn-default"> <img
                     src="../../../assets/images/icon-pdf.png" height="50">
                   <div class="font-size-12">
@@ -293,7 +293,7 @@
                   </mat-paginator>
                 </div>
               </mat-tab>
-              <mat-tab label="Statistics">
+              <mat-tab label="Statistics" *ngIf="loggedUser.package[0].package_id === packageType.standard">
                 <div class="row margin-top-10 margin-bottom-10"></div>
                 <p-progressBar *ngIf="showIndeterminateProgress" [style]="{'height': '3px'}" mode="indeterminate">
                 </p-progressBar>
