--- a/src/app/platform/drivers/driver-shift-allocation/driver-shift-allocation.component.html
+++ b/src/app/platform/drivers/driver-shift-allocation/driver-shift-allocation.component.html
@@ -315,14 +315,14 @@
                     <th mat-header-cell *matHeaderCellDef>Start Time</th>
                     <td mat-cell *matCellDef="let row">
                       <!-- {{tConvert(row.shift_start_time)}} -->
-                      {{(row.shift_start_time == null) ? 'N/A': startTimeConvert(row.shift_start_time)}}
+                      {{(row.shift_start_time == null) ? 'N/A': startTimeConversion(row.shift_start_time)}}
                       <!-- {{(row.shift_start_time == null) ? 'N/A': row.shift_start_time}} -->
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="shift_end_time">
                     <th mat-header-cell *matHeaderCellDef>End Time</th>
                     <td mat-cell *matCellDef="let row">
-                      {{(row.shift_end_time == null) ? 'N/A': endTimetConvert(row.shift_end_time)}}
+                      {{(row.shift_end_time == null) ? 'N/A': endTimeConversion(row.shift_end_time)}}
                       <!-- {{(row.shift_end_time == null) ? 'N/A': row.shift_end_time}} -->
                     </td>
                   </ng-container>
