--- a/src/app/platform/auditForm/audit-document/audit-document.component.html
+++ b/src/app/platform/auditForm/audit-document/audit-document.component.html
@@ -62,6 +62,24 @@
                     <div class="row">
                       <div class="col-lg-6">
                         <div class="form-group">
+                          <label class="control-label">Select Type </label>
+
+                          <p-dropdown [options]="statusList" [disabled]="disableCheck" [(ngModel)]="selectedValue" styleClass="prime-dropdown" name="documentName"
+                             (onChange)="onDocumentNameChange($event.value)" filterPlaceholder="Search"
+                            formControlName="documentName" optionLabel="name" placeholder="Select Document Type">
+                          </p-dropdown>
+                          <!-- <span class="error-message"
+                            *ngIf="contractForm.get('documentName').getError('required') && submitted ">
+                            Please Select Driver Group
+                          </span> -->
+                        </div>
+                      </div>
+
+                      
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6" *ngIf="selectedType== 'driver' ">
+                        <div class="form-group">
                           <label class="control-label">Select Driver Group <span
                               class="required  text-danger2">*</span></label>
 
@@ -76,7 +94,23 @@
                         </div>
                       </div>
 
-                      <div class="col-lg-6">
+                      <div class="col-lg-6" *ngIf="selectedType== 'fleet' ">
+                        <div class="form-group">
+                          <label class="control-label">Select Fleet <span
+                              class="required  text-danger2">*</span></label>
+
+                          <p-dropdown [options]="fleets" styleClass="prime-dropdown" name="select_fleet"
+                            filter="true" (onChange)="onFleetChange($event.value)" filterPlaceholder="Search"
+                            formControlName="select_fleet" optionLabel="name" placeholder="Select Fleet">
+                          </p-dropdown>
+                          <span class="error-message"
+                            *ngIf="contractForm.get('select_fleet').getError('required') && submitted ">
+                            Please Select Fleet
+                          </span>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-6" *ngIf="selectedType== 'driver' ">
                         <div class="form-group">
                           <label class="control-label">Select Driver <span
                               class="required  text-danger2">*</span></label>
@@ -90,10 +124,25 @@
                           </span>
                         </div>
                       </div>
+
+                      <div class="col-lg-6" *ngIf="selectedType== 'fleet' ">
+                        <div class="form-group">
+                          <label class="control-label">Select Vehicle <span
+                              class="required  text-danger2">*</span></label>
+                          <p-dropdown [options]="vehicles" styleClass="prime-dropdown" name="select_vehicle" filter="true"
+                            filterPlaceholder="Search" formControlName="select_vehicle" optionLabel="name"
+                            placeholder="Select Vehicle">
+                          </p-dropdown>
+                          <span class="error-message"
+                            *ngIf="contractForm.get('select_vehicle').getError('required') && submitted ">
+                            Please Select Driver
+                          </span>
+                        </div>
+                      </div>
                     </div>
 
                     <div class="row">
-                      <div class="col-lg-6">
+                      <div class="col-lg-6" *ngIf="selectedType== 'fleet' || selectedType== 'driver' ">
                         <div class="form-group">
                           <label class="control-label">Select Document type <span
                               class="required  text-danger2">*</span></label>
@@ -212,6 +261,15 @@
           <form [formGroup]="searchForm" (ngSubmit)="onSearch(searchForm.value)">
             <div class="form-group margin-bottom-10">
               <fieldset class="form-fieldset">
+                <legend>Select Type</legend>
+                <div class="form-group margin-bottom-10">
+                  <p-dropdown [options]="statusList" styleClass="prime-dropdown" name="documentName"
+                             (onChange)="onDocumentNameChangeTwo($event.value)" filterPlaceholder="Search"
+                            formControlName="documentName" optionLabel="name" placeholder="Select Document Type">
+                  </p-dropdown>
+                </div>
+              </fieldset>
+              <fieldset class="form-fieldset">
                 <legend>Search</legend>
 
                 <div class="form-group margin-bottom-10">
@@ -278,13 +336,14 @@
       <div class="panel panel-default card shadow light">
         <div class="panel-heading" style="margin-bottom: 0px;">
           <div class="panel-actions"> </div>
-          <h3 class="panel-title "><b>List</b></h3>
+          <h3 class="panel-title "><b>{{listVariable}}</b></h3>
         </div>
         <div class="panel-body padding-0">
           <div class="padding-10">
             <p-progressBar *ngIf="showIndeterminateProgress" [style]="{'height': '5px'}" mode="indeterminate">
             </p-progressBar>
             <div class="table-responsive margin-top-20" style="border: 1px solid #ebebeb;">
+            <div *ngIf="reportTypeTable == 1">
 
               <table matSort (matSortChange)="sortData($event)"
                 class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1" mat-table
@@ -389,7 +448,113 @@
                 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
               </table>
+            </div>
+            <div *ngIf="reportTypeTable == 2">
 
+              <table matSort (matSortChange)="sortData($event)"
+                class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1" mat-table
+                [dataSource]="contracts" mat-elevation-z8 multiTemplateDataRows>
+
+                <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
+                  <td mat-cell *matCellDef="let row">
+                    <div style="float: left; position: relative;">
+                      <span style="float: left; margin-left: -10px!important; margin-top: 3px;" id="content" class=""
+                        (click)="expandedElement = expandedElement === row ? null : row">
+                      </span>
+                    </div>
+                    <div class="padding-left-15">
+                      {{ row.id || 'N/A' }}
+                    </div>
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="entity">
+                  <th mat-header-cell *matHeaderCellDef>Entity</th>
+                  <td mat-cell *matCellDef="let row">{{ row.driver_name || 'N/A' }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="document_type">
+                  <th mat-header-cell *matHeaderCellDef>Document Type</th>
+                  <td mat-cell *matCellDef="let row">{{ row.document_type || 'N/A' }}
+                  </td>
+                </ng-container>
+
+
+                <ng-container matColumnDef="uploaded_documents">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Uploaded Documents</th>
+                  <td mat-cell *matCellDef="let row">{{row.document_file.length ||
+                    '-'}}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="upload_date">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Uploaded Date</th>
+                  <td mat-cell *matCellDef="let row">{{(row.created_at | date:
+                    'mediumDate') || '-'}}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="upload_by">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Uploaded By</th>
+                  <td mat-cell *matCellDef="let row">{{row.uploaded_by || '-'}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="actions">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+                  <td mat-cell *matCellDef="let row; let i = index;">
+                    <button type="button" *ngIf="loggedInUser.read_only != true" class="btn btn-icon  btn-info btn-xs "
+                      [hidden]="disableButton(row)" data-target="#editpop1" (click)="openEditModal(row, i)"
+                      data-toggle="modal" pTooltip="Edit">
+                      <i class="icon ion-edit"></i>
+                    </button>
+                    <button type="button" *ngIf="loggedInUser.read_only != true" pTooltip="Delete"
+                      class="btn btn-icon  btn-danger btn-xs " (click)="showDeleteCategoryConfirmation(row)"
+                      data-original-title="Delete"><i class="icon ion-android-delete"></i>
+                    </button>
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="expandedDetail">
+                  <td mat-cell *matCellDef="let search" [attr.colspan]="displayedColumns.length"
+                    style="padding-left: 28px;padding-right: 8px;padding-top:0px;padding-bottom:0px">
+                    <div class="example-element-detail"
+                      [@detailExpand]="search === expandedElement ? 'expanded' : 'collapsed'">
+                      <div class="example-element-description">
+                        <div class="mat-row detail-row"
+                          style="display: flex; padding: 10px 0px 10px 50px; overflow: hidden;visibility: visible;">
+
+                          <div *ngFor="let item of search?.document_file; let i=index"
+                            style="border-bottom: 1p solid inherit;">
+
+                            <div class="btn-group" role="group" style="display: inline-block!important;">
+                              <a>
+                                <button type="button" (click)="showPDF(item)" class="btn btn-outline btn-default">
+                                  <img src="../../../assets/images/icon-pdf.png" height="30">
+                                  <div class="font-size-12">{{getFileName(item)}}</div>
+                                </button>
+                              </a>
+                            </div>
+                          </div>
+
+                          <div *ngIf="search?.document_file?.length === 0 " class="no-records"
+                            style=" padding: 10px 0px 10px 80px; overflow: hidden; margin-left: -62px;">
+                            There is no file to show
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; let i = index; columns: displayedColumns;"
+                  class="element-row example-element-row" [class.example-expanded-row]="expandedElement === row"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+              </table>
+            </div>
               <div *ngIf="contracts?.length === 0 && !showIndeterminateProgress" class="no-records">
                 No records found
               </div>
