--- a/src/app/platform/admin-forms/admin-tool-form/admin-tool-form.component.html
+++ b/src/app/platform/admin-forms/admin-tool-form/admin-tool-form.component.html
@@ -69,7 +69,7 @@
                         <label class="font-size-14 font-weight-600 ">Export:</label>
                         <div class="btn-group btn-group-justified">
                           <div class="btn-group" role="group">
-                            <a [href]="downloadableLink">
+                            <a (click)="downloadXLS(downloadableLink)">
                               <button type="button" class="btn btn-outline btn-default"> <img
                                   src="../../../assets/images/icon-xls.png" height="50">
                                 <div class="font-size-12">
@@ -80,7 +80,7 @@
                             </a>
                           </div>
                           <div class="btn-group" role="group">
-                            <a [href]="downloadableLink1">
+                            <a (click)="downloadPDF(downloadableLink1)">
                               <button type="button" class="btn btn-outline btn-default"> <img
                                   src="../../../assets/images/icon-pdf.png" height="50">
                                 <div class="font-size-12">Download PDF</div>
