export pdf xls changes

--- a/src/app/platform/fleets/fleet-dashboard/fleet-dashboard.component.html
+++ b/src/app/platform/fleets/fleet-dashboard/fleet-dashboard.component.html
@@ -111,7 +111,7 @@
                 <a (click)="downloadXLS(downloadableLink)" class="btn btn-outline btn-default"> <img
                     src="../../../assets/images/icon-xls.png" height="50">
                   <div class="font-size-12">
-                    Download XL
+                    Download XLS
                   </div>
                 </a>
               </div>
