--- a/src/app/platform/admin-forms/admin-truck-form/admin-truck-form.component.html
+++ b/src/app/platform/admin-forms/admin-truck-form/admin-truck-form.component.html
@@ -1,6 +1,7 @@
 <app-unauthorized-page (isAuthorized)="isAuthorizedUser($event)" *ngIf="!isAuthorized"></app-unauthorized-page>
 
-<div [className]="sidebarCheck ? 'half-open-breadcrum breadcrumb-box' : 'full-open-breadcrum breadcrumb-box' " #scrollToTop [hidden]="!isAuthorized">
+<div [className]="sidebarCheck ? 'half-open-breadcrum breadcrumb-box' : 'full-open-breadcrum breadcrumb-box' "
+  #scrollToTop [hidden]="!isAuthorized">
   <ol class="breadcrumb breadcrumb-arrow ">
     <li><a class="icon ion-ios-home" routerLink="/iol"> Dashboard </a> </li>
     <!-- <li *ngIf="!breadcrumbInner=='' "><a routerLink="/iol/{{breadcrumbInner[0]}}"> {{breadcrumbInner[1]}} </a></li> -->
@@ -9,7 +10,9 @@
   </ol>
 </div>
 
-<div [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' "  style="padding-bottom:200px" [hidden]="!isAuthorized">
+<div
+  [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' "
+  style="padding-bottom:200px" [hidden]="!isAuthorized">
   <div class="panel-heading font-weight-600 margin-bottom-0">
   </div>
   <div class="panel-body padding-0">
@@ -74,7 +77,7 @@
                       </select>
                     </div>
                     <div class="form-group" *ngIf="add_btn==0">
-                      
+
                       <p-multiSelect [options]="driver_list" name="driver_id" formControlName="driver_id"
                         optionLabel="name" styleClass="prime-dropdown" filter="true"
                         (onChange)="driverDropdownChanged($event)" filterPlaceHolder="Search"
@@ -147,24 +150,27 @@
                   <label class="font-size-14 font-weight-600 ">{{exportVariable}}</label>
                   <div class="btn-group btn-group-justified">
                     <div class="btn-group" role="group">
-                      <a [href]="downloadableLink">
+                      <!-- [href]="downloadableLink" -->
+                      <a (click)="downloadXLS(downloadableLink)">
                         <button type="button" class="btn btn-outline btn-default"> <img
                             src="../../../assets/images/icon-xls.png" height="50">
                           <!-- href="{{url}}/iof/driver_profile_report/?is_export=yes"   [disabled]="exportsid==true"-->
                           <div class="font-size-12">
-                            <a [href]="downloadableLink">Download XLS
-                            </a>
+                            <!-- [href]="downloadableLink" -->
+                            <a>Download XLS</a>
                           </div>
                         </button>
                       </a>
                     </div>
                     <div class="btn-group" role="group">
-                      <a [href]="downloadableLink1">
+                      <!-- [href]="downloadableLink1" -->
+                      <a (click)="downloadPDF(downloadableLink1)">
                         <button type="button" class="btn btn-outline btn-default"> <img
                             src="../../../assets/images/icon-pdf.png" height="50">
                           <!-- [disabled]="exportsid==true"  -->
                           <div class="font-size-12">
-                            <a [href]="downloadableLink1">Download PDF</a>
+                            <!-- [href]="downloadableLink1" -->
+                            <a>Download PDF</a>
                           </div>
                         </button>
                       </a>
@@ -344,7 +350,7 @@
 
                         <table matSort (matSortChange)="sortDataFleet($event)"
                           class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1"
-                          style="border: 1px solid #ebebeb;" mat-table [dataSource]="fleets" mat-elevation-z8>
+                          style="border: 1px solid #ebebeb;" mat-table [dataSource]="fleets2" mat-elevation-z8>
                           <ng-container matColumnDef="name">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Fleet Name</th>
                             <td mat-cell *matCellDef="let row">
