--- a/src/app/platform/drivers/dash-board-driver/dash-board-driver.component.html
+++ b/src/app/platform/drivers/dash-board-driver/dash-board-driver.component.html
@@ -1,10 +1,11 @@
 <app-unauthorized-page (isAuthorized)="isAuthorizedUser($event)" *ngIf="!isAuthorized"></app-unauthorized-page>
 
 <div [className]="sidebarCheck ? 'half-open-breadcrum breadcrumb-box' : 'full-open-breadcrum breadcrumb-box' ">
-<app-breadcrumbs [items]="items" [home]="home" #scrollToTop [hidden]="!isAuthorized"></app-breadcrumbs>
+    <app-breadcrumbs [items]="items" [home]="home" #scrollToTop [hidden]="!isAuthorized"></app-breadcrumbs>
 </div>
 
-<div [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' "  [hidden]="!isAuthorized">
+<div [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' "
+    [hidden]="!isAuthorized">
     <div class="row">
         <div [ngClass]="{'col-md-2': cardsArray.length === 4 || cardsArray.length === 3, 'col-md-6': cardsArray.length === 1}"
             *ngFor="let card of cardsArray; let i = index" [attr.data-index]="i">
@@ -18,7 +19,7 @@
             <div
                 class="flex-card flex-action-widget padding-15 bg-blue-800 text-center relative shadow white margin-bottom-30">
                 <app-dashboard-widget [widgetData]="widgetData" (selectedWidget)="getSelectedWidgetOption($event)"
-                (exportToCSV)="ExportDriverListAsCSV()">
+                    (exportToCSV)="ExportDriverListAsCSV()">
                 </app-dashboard-widget>
             </div>
         </div>
@@ -132,8 +133,8 @@
 
                                             <!-- Mat-Table -->
                                             <div class="panel-body padding-15">
-                                              <p-progressBar *ngIf="loadingFilter" [style]="{'height': '3px'}"
-                                                  mode="indeterminate"></p-progressBar>
+                                                <p-progressBar *ngIf="loadingFilter" [style]="{'height': '3px'}"
+                                                    mode="indeterminate"></p-progressBar>
                                                 <div class="table-responsive" style="border: 1px solid #ebebeb;">
                                                     <table matSort (matSortChange)="sortDataForMap($event)"
                                                         class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1"
@@ -144,8 +145,9 @@
                                                             </th>
                                                             <td mat-cell *matCellDef="let row">
                                                                 <div style="float: left">
-                                                                  <span style="float: left;margin-left: -22px;margin-top: 3px;" id="content"
-                                                                  class=""></span>
+                                                                    <span
+                                                                        style="float: left;margin-left: -22px;margin-top: 3px;"
+                                                                        id="content" class=""></span>
                                                                     <img [src]="row.photo || '../assets/images/default_user.png'"
                                                                         class="img-bordered pull-left margin-right-10"
                                                                         height="36px" />
@@ -158,7 +160,8 @@
                                                                 </div>
                                                             </td>
                                                         </ng-container>
-                                                        <ng-container matColumnDef="truck_name" (click)=$event.stopPropagation()>
+                                                        <ng-container matColumnDef="truck_name"
+                                                            (click)=$event.stopPropagation()>
                                                             <th mat-header-cell *matHeaderCellDef mat-sort-header>
                                                                 Vehicle
                                                             </th>
@@ -183,8 +186,9 @@
                                                     <div *ngIf="dataSourceForMap?.length == 0">
                                                         <p>No record found</p>
                                                     </div>
-                                                    <mat-paginator translate="no" #paginatorForMap [length]="totalLengthForMap"
-                                                        [hidePageSize]="true" showFirstLastButtons [pageSize]="10"
+                                                    <mat-paginator translate="no" #paginatorForMap
+                                                        [length]="totalLengthForMap" [hidePageSize]="true"
+                                                        showFirstLastButtons [pageSize]="10"
                                                         (page)="onPaginateChange($event)">
                                                     </mat-paginator>
                                                 </div>
@@ -208,19 +212,21 @@
                                                 <label class="font-size-14 font-weight-600 ">Export:</label>
                                                 <div class="btn-group btn-group-justified">
                                                     <div class="btn-group" role="group">
-                                                        <a [href]="downloadableLink">
+                                                        <!-- [href]="downloadableLink" -->
+                                                        <a (click)="downloadXLS(downloadableLink)">
                                                             <button type="button" class="btn btn-outline btn-default">
                                                                 <img src="../../../assets/images/icon-xls.png"
                                                                     height="50">
                                                                 <div class="font-size-12">
-                                                                    <a [href]="downloadableLink" class="enabled">
-                                                                        Download XLS </a>
+                                                                    <!-- [href]="downloadableLink" -->
+                                                                    <a class="enabled">Download XLS </a>
                                                                 </div>
                                                             </button>
                                                         </a>
                                                     </div>
                                                     <div class="btn-group" role="group">
-                                                        <a [href]="downloadableLink1">
+                                                        <!-- [href]="downloadableLink1" -->
+                                                        <a (click)="downloadPDF(downloadableLink1)">
                                                             <button type="button" class="btn btn-outline btn-default">
                                                                 <img src="../../../assets/images/icon-pdf.png"
                                                                     height="50">
@@ -263,21 +269,22 @@
                                 <div class="panel panel-default margin-bottom-0 ">
                                     <div class="panel-body padding-15 padding-top-0">
                                         <div class="row margin-bottom-10">
-                                          <div class="panel-heading margin-bottom-0">
-                                            <h3 class="panel-title font-weight-600 bg-teal-8001 white1"
-                                                style="border-bottom: 1px solid rgba(0, 0, 0, .075)">Driver History</h3>
-                                            <div class="panel-actions" style="right: 15px">
-                                              <div class="pull-right">
-                                                  <div class="input-search" style="width: 200px">
-                                                      <input type="text" style="border-radius: 3px"
-                                                          (keyup)='keyUp.next($event)' class="form-control"
-                                                          placeholder="Search by driver name">
-                                                      <button type="button" class="input-search-btn">
-                                                          <i class="icon ion-ios-search-strong"></i>
-                                                      </button>
-                                                  </div>
-                                              </div>
-                                            </div>
+                                            <div class="panel-heading margin-bottom-0">
+                                                <h3 class="panel-title font-weight-600 bg-teal-8001 white1"
+                                                    style="border-bottom: 1px solid rgba(0, 0, 0, .075)">Driver History
+                                                </h3>
+                                                <div class="panel-actions" style="right: 15px">
+                                                    <div class="pull-right">
+                                                        <div class="input-search" style="width: 200px">
+                                                            <input type="text" style="border-radius: 3px"
+                                                                (keyup)='keyUp.next($event)' class="form-control"
+                                                                placeholder="Search by driver name">
+                                                            <button type="button" class="input-search-btn">
+                                                                <i class="icon ion-ios-search-strong"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <p-progressBar *ngIf="loadingFilter" [style]="{'height': '3px'}"
@@ -357,8 +364,9 @@
                                             <div *ngIf="dataSource?.length == 0">
                                                 <p>No record found</p>
                                             </div>
-                                            <mat-paginator translate="no" #paginator [length]="totalLength" [hidePageSize]="true"
-                                                showFirstLastButtons [pageSize]="10" (page)="onPaginateChange($event)">
+                                            <mat-paginator translate="no" #paginator [length]="totalLength"
+                                                [hidePageSize]="true" showFirstLastButtons [pageSize]="10"
+                                                (page)="onPaginateChange($event)">
                                             </mat-paginator>
                                         </div>
                                     </div>
