--- a/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
+++ b/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
@@ -214,18 +214,20 @@
                                   <label class="font-size-14 font-weight-600 ">Export:</label>
                                   <div class="btn-group btn-group-justified">
                                     <div class="btn-group" role="group">
-                                      <a [href]="downloadableLink">
+                                      <!-- [href]="downloadableLink" -->
+                                      <a (click)="downloadXLS(downloadableLink)">
                                         <button type="button" class="btn btn-outline btn-default"> <img
                                             src="../../../assets/images/icon-xls.png" height="50">
                                           <div class="font-size-12">
-                                            <a [href]="downloadableLink" class="enabled">
-                                              Download XLS </a>
+                                            <!-- [href]="downloadableLink" -->
+                                            <a class="enabled">Download XLS </a>
                                           </div>
                                         </button>
                                       </a>
                                     </div>
                                     <div class="btn-group" role="group">
-                                      <a [href]="downloadableLink1">
+                                      <!-- [href]="downloadableLink1" -->
+                                      <a (click)="downloadPDF(downloadableLink1)">
                                         <button type="button" class="btn btn-outline btn-default"> <img
                                             src="../../../assets/images/icon-pdf.png" height="50">
                                           <div class="font-size-12">Download PDF</div>
@@ -311,7 +313,8 @@
                 </div>
               </div>
 
-              <div class="margin-bottom-15 text-center" *ngIf="!(truck?.signalRresponse?.spd > 0 && tooLongOrtooShortDistance)">
+              <div class="margin-bottom-15 text-center"
+                *ngIf="!(truck?.signalRresponse?.spd > 0 && tooLongOrtooShortDistance)">
                 <div *ngIf="idleDuration" class="font-size-14  margin-bottom-0">Since last park</div>
                 <span *ngIf="idleDuration"> {{convert(idleDuration)}}</span>
               </div>
