--- a/src/app/platform/admin-forms/admin-truck-form/admin-truck-form.component.html
+++ b/src/app/platform/admin-forms/admin-truck-form/admin-truck-form.component.html
@@ -350,7 +350,7 @@
 
                         <table matSort (matSortChange)="sortDataFleet($event)"
                           class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1"
-                          style="border: 1px solid #ebebeb;" mat-table [dataSource]="fleets2" mat-elevation-z8>
+                          style="border: 1px solid #ebebeb;" mat-table [dataSource]="fleets" mat-elevation-z8>
                           <ng-container matColumnDef="name">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Fleet Name</th>
                             <td mat-cell *matCellDef="let row">
