--- a/src/app/platform/auditForm/audit-document/audit-document.component.html
+++ b/src/app/platform/auditForm/audit-document/audit-document.component.html
@@ -471,7 +471,7 @@
 
                 <ng-container matColumnDef="entity">
                   <th mat-header-cell *matHeaderCellDef>Entity</th>
-                  <td mat-cell *matCellDef="let row">{{ row.driver_name || 'N/A' }}
+                  <td mat-cell *matCellDef="let row">{{ row.vehicle_name || 'N/A' }}
                   </td>
                 </ng-container>
 
