--- a/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
+++ b/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
@@ -1164,20 +1164,20 @@
                                     <ng-container matColumnDef="first_name">
                                       <th mat-header-cell *matHeaderCellDef>Fuel Filled(Liter)</th>
                                       <td mat-cell *matCellDef="let row">
-                                        {{(row.fuel_filled == null) ? '-': row.fuel_filled}}
+                                        {{(row.fuel_filled == null) ? '-': row.fuel_filled | number:'1.0-2'}}
                                       </td>
                                     </ng-container>
                                     <ng-container matColumnDef="last_name">
                                       <th mat-header-cell *matHeaderCellDef>Distance Travelled(KM)</th>
                                       <td mat-cell *matCellDef="let row">
-                                        {{(row.distance == null) ? '-': row.distance}}
+                                        {{(row.distance == null) ? '-': row.distance | number:'1.0-2'}}
                                       </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="date_joined">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header>Mileage(KM/L)</th>
                                       <td mat-cell *matCellDef="let row">
-                                        {{(row.mileage == null) ? '-': row.mileage}}
+                                        {{(row.mileage == null ) ? '-': row.mileage | number:'1.0-2'}}
                                       </td>
                                     </ng-container>
                                     <ng-container>
@@ -1210,20 +1210,20 @@
                                     <ng-container matColumnDef="first_name">
                                       <th mat-header-cell *matHeaderCellDef>Fuel Filled(Liter)</th>
                                       <td mat-cell *matCellDef="let row">
-                                        {{(row.fuel_filled == null) ? '-': row.fuel_filled}}
+                                        {{(row.fuel_filled == null) ? '-': row.fuel_filled | number:'1.0-2'}}
                                       </td>
                                     </ng-container>
                                     <ng-container matColumnDef="last_name">
                                       <th mat-header-cell *matHeaderCellDef>Distance Travelled(KM)</th>
                                       <td mat-cell *matCellDef="let row">
-                                        {{(row.distance == null) ? '-': row.distance}}
+                                        {{(row.distance == null) ? '-': row.distance | number:'1.0-2'}}
                                       </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="date_joined">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header>Mileage(KM/L)</th>
                                       <td mat-cell *matCellDef="let row">
-                                        {{(row.mileage == null) ? '-': row.mileage}}
+                                        {{(row.mileage == null) ? '-': row.mileage | number:'1.0-2'}}
                                       </td>
                                     </ng-container>
 
