--- a/src/app/platform/admin-forms/admin-contract-form/admin-contract-form.component.html
+++ b/src/app/platform/admin-forms/admin-contract-form/admin-contract-form.component.html
@@ -439,7 +439,7 @@
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="created_datetime">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Created Date</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Created Date TIME</th>
                     <td mat-cell *matCellDef="let row">{{(row.created_datetime | date:
                       'medium') || '-'}}</td>
                   </ng-container>
