Fixed Date Time text issue told by maaz

--- a/src/app/platform/admin-forms/admin-fuel-form/admin-fuel-form.component.html
+++ b/src/app/platform/admin-forms/admin-fuel-form/admin-fuel-form.component.html
@@ -165,7 +165,7 @@
                             <td mat-cell *matCellDef="let row">{{ row.fuel_supervisor_name }}</td>
                           </ng-container>
                           <ng-container matColumnDef="fill_up_date">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>FILLUP DATE</th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>FILLUP DATE TIME</th>
                             <td mat-cell *matCellDef="let row">
                               {{ (row.fill_up_date | date: 'M/d/yyyy h:mm:ss a ') || 'N/A' }}</td>
                           </ng-container>
