--- a/src/app/platform/drivers/manage-shifts/manage-shifts.component.html
+++ b/src/app/platform/drivers/manage-shifts/manage-shifts.component.html
@@ -60,19 +60,16 @@
               <label class="font-size-14 font-weight-600 ">Export:</label>
               <div class="btn-group btn-group-justified">
                 <div class="btn-group" role="group">
-                  <!-- [href]="downloadableLink"  -->
                   <a (click)="downloadXLS(downloadableLink)">
                     <button type="button" class="btn btn-outline btn-default"> <img
                         src="../../../assets/images/icon-xls.png" height="50">
                       <div class="font-size-12">
-                        <!-- [href]="downloadableLink" -->
                         <a class="enabled">Download XLS </a>
                       </div>
                     </button>
                   </a>
                 </div>
                 <div class="btn-group" role="group">
-                  <!-- [href]="downloadableLink1" -->
                   <a (click)="downloadPDF(downloadableLink1)">
                     <button type="button" class="btn btn-outline btn-default"> <img
                         src="../../../assets/images/icon-pdf.png" height="50">
@@ -142,7 +139,7 @@
                         </td>
                       </ng-container>
                       <ng-container matColumnDef="created_datetime">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Created Date</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Created Date Time</th>
                         <td mat-cell *matCellDef="let row">{{ (row.created_datetime | date: 'M/d/yy, h:mm:ss a') ||
                           'N/A' }}</td>
                       </ng-container>
@@ -229,7 +226,6 @@
                           <div class="form-group margin-bottom-10">
                             <label>Start Date<span class="text-danger2">*</span></label>
                             <div class="input-icon">
-                              <!-- [(ngModel)]="contractStartDate" -->
                               <p-calendar [readonlyInput]="true" [(ngModel)]="contractStartDate"
                                 [minDate]="shiftstartDay" name="startDate" (onSelect)="getStartDate($event)"
                                 placeholder="MM/DD/YYYY" styleClass="prime-datetime" formControlName="startDate">
@@ -245,7 +241,6 @@
                           <div class="form-group margin-bottom-10">
                             <label>End Date<span class="text-danger2">*</span></label>
                             <div class="input-icon">
-                              <!-- [disabled]="!contractStartDate"[minDate]="contractStartDate" [(ngModel)]="contractEndDate" -->
                               <p-calendar [readonlyInput]="true" [disabled]="!contractStartDate"
                                 [minDate]="contractStartDate" (onSelect)="getEndDate($event)" name="endDate"
                                 placeholder="MM/DD/YYYY" styleClass="prime-datetime" formControlName="endDate">
@@ -284,9 +279,7 @@
                                 <tbody>
                                   <tr *ngFor="let item of getDayName">
                                     <td>
-                                      <!-- class="checkbox-custom checkbox-inline1 checkbox-warning" -->
                                       <div>
-                                        <!-- <input type="checkbox" formControlName="{{item}}CB" id="Monday" form name="checkbox" > -->
                                         <label for="Monday">{{item}}</label>
                                       </div>
                                     </td>
