--- a/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
+++ b/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
@@ -534,7 +534,9 @@
           </div>
         </div>
         <div class="panel-body padding-20 ">
-          <div class="text-wrap">
+          <div class="text-wrap" style="overflow: scroll;
+          display: flex;
+          padding-bottom: 15px;">
             <div class="">
               <div class="media">
                 <div class="media-left">
