recenter btn added on playback

--- a/src/app/platform/play-back/quick-view/quick-view.component.html
+++ b/src/app/platform/play-back/quick-view/quick-view.component.html
@@ -106,7 +106,7 @@
                         {{state}}
                       </div>
 
-                      <app-google-map #trailMap class="trailMapHeight" [markers]="violationMarkers"
+                      <app-google-map #trailMap class="trailMapHeight" [markers]="violationMarkers" [recenter]="true"
                         [poiLocations]="locations" [trucks]="trucks" [signalRstarted]="signalRstarted"
                         [infowindow]="violationInfoWindows">
                       </app-google-map>
